@@ -11,6 +11,7 @@ export(SyntheticControl)
 export(bayNorm)
 export(bayNorm_sup)
 export(noisy_gene_detection)
+import(BiocParallel)
 import(MASS)
 import(doSNOW)
 import(fitdistrplus)
