@@ -36,8 +36,8 @@ to generate from estimated posterior distribution
 Default is 20. S needs to be specified if
 \code{mode_version}=FALSE.}
 
-\item{parallel}{If TRUE, 5 cores will be used
-for parallelization.}
+\item{parallel}{If TRUE, \code{NCores} cores will be
+used for parallelization. Default is TRUE.}
 
 \item{NCores}{number of cores to use, default is 5.
 This will be used to set up a parallel environment
